--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -11,6 +11,9 @@ body {
     background-color: $backgroundColor;
     color: #ffffff;
     font-family: Helvetica, Arial, sans-serif;
+
+    overflow-x: hidden;
+    position: relative;
 }
 
 *, *::before, *::after {
